<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="16dp"
    android:paddingEnd="8dp"
    android:paddingVertical="8dp"
    android:background="@drawable/listitem_ripple_effect">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:gravity="center_vertical"
        android:orientation="vertical">
        <TextView
            android:id="@+id/track_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="track_title"
            android:textSize="16dp"
            android:textColor="@android:color/primary_text_light"/>
        <TextView
            android:id="@+id/album_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="album_title"
            android:textSize="12dp"
            android:textColor="@android:color/secondary_text_light"/>
    </LinearLayout>

    <ImageButton
        android:id="@+id/track_fav_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:src="@drawable/ic_add_icon"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:background="@drawable/button_ripple_effect"/>

</RelativeLayout>